@@ -11,7 +11,7 @@
         name="content-stats"
         for="Products.CMFPlone.interfaces.IPloneSiteRoot"
         template="templates/content_stats.pt"
-        class=".content_stats.ContentStats"
+        class=".content_stats.ContentStatsView"
         permission="cmf.ManagePortal"
         />
 
