@@ -6,7 +6,6 @@ tests_require = [
     'ftw.builder',
     'ftw.testbrowser',
     'ftw.testing',
-    'plone.api',
     'plone.app.testing',
     'plone.testing',
     'transaction',
@@ -52,6 +51,7 @@ setup(
         'Products.CMFCore',
         'Products.CMFPlone',
         'Products.GenericSetup',
+        'plone.api',
         'setuptools',
         'zope.i18nmessageid',
     ],
